<resources>
    <string name="app_name">WishlistApp</string>

    <string name="title">Title</string>
    <string name="price">00.0</string>
    <string name="category">Category</string>
    <string name="go_to_shop">Go to Shop</string>
    <string name="go_to_wishlists">Go to Wishlists</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="go_to_your_wishlist">Go to your Wishlist</string>
    <string name="register_here">Register Here</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login now</string>

</resources>