<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:src="@drawable/applogo" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed"
      android:gravity="center"
      android:text="@string/register_here"
      android:textColor="#CC000000"
      android:textSize="18sp"
      android:textStyle="bold" />


  <EditText
      android:id="@+id/fullName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:hint="@string/full_name"
      android:inputType="text"
      android:maxLines="1"
      android:paddingStart="20dp"
      android:paddingEnd="0dp" />

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:paddingStart="20dp"
      android:paddingEnd="0dp" />

  <EditText
      android:id="@+id/phone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:hint="@string/mobile"
      android:inputType="phone"
      android:maxLines="1"
      android:paddingStart="20dp"
      android:paddingEnd="0dp" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:maxLines="1"
      android:paddingStart="20dp"
      android:paddingEnd="0dp" />

  <EditText
      android:id="@+id/conPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:hint="@string/repeat_password"
      android:inputType="textPassword"
      android:maxLines="1"
      android:paddingStart="20dp"
      android:paddingEnd="0dp"
      tools:ignore="DuplicateIds" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/registerBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:background="@color/bran_red"
      android:textColor="@color/white"
      android:text="@string/register_btn" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/login_now"
        android:textStyle="bold" />

  </LinearLayout>

  </androidx.appcompat.widget.LinearLayoutCompat>